Remove unnecessary stuff